Tambah icon signout

--- a/application/views/kelola_donasi_kemalangan.html
+++ b/application/views/kelola_donasi_kemalangan.html
@@ -33,13 +33,15 @@
     <div class="main-wrapper main-wrapper-1">
       <div class="navbar-bg"></div>
       <nav class="navbar navbar-expand-lg main-navbar">
-        <form class="form-inline mr-auto">
+        <<form class="form-inline mr-auto">
           <ul class="navbar-nav mr-3">
             <li><a href="#" data-toggle="sidebar" class="nav-link nav-link-lg"><i class="fas fa-bars"></i></a></li>
-            <li><a href="#" data-toggle="search" class="nav-link nav-link-lg d-sm-none"><i class="fas fa-search"></i></a></li>
           </ul>
-        </form>
-        <ul class="navbar-nav navbar-right">
+          </form>
+          <ul class="navbar-nav mr-3">
+          <li><a href="#" data-toggle="search" class="nav-link nav-link-lg d-sm"><i class="fa fa-sign-out-alt" style='font-size:23px'></i></a></li>
+          </ul>
+          <ul class="navbar-nav navbar-right">
           
         </ul>
       </nav>
