--- a/application/views/kelola_donasi_pendidikan.html
+++ b/application/views/kelola_donasi_pendidikan.html
@@ -36,9 +36,11 @@
         <form class="form-inline mr-auto">
           <ul class="navbar-nav mr-3">
             <li><a href="#" data-toggle="sidebar" class="nav-link nav-link-lg"><i class="fas fa-bars"></i></a></li>
-            <li><a href="#" data-toggle="search" class="nav-link nav-link-lg d-sm-none"><i class="fas fa-search"></i></a></li>
           </ul>
         </form>
+        <ul class="navbar-nav mr-3">
+          <li><a href="#" data-toggle="search" class="nav-link nav-link-lg d-sm"><i class="fa fa-sign-out-alt" style='font-size:23px'></i></a></li>
+        </ul>
         <ul class="navbar-nav navbar-right">
           
         </ul>
